[package]
name = "rustmit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
colored = "2.0"
dialoguer = "0.10.0"
git2 = "0.13.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"